feat: refactor of everything, i don't remember it was done a long time ago :) good luck